tests/parser/bug_70/test_1.m.out
In test_1.m, line 4
| [~ foo] = size(1);
|    ^^^ error: expected COMMA, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
