tests/parser/bug_70/test_1.m
% (c) Copyright 2020 Zenuity AB

% This must produce a syntax error, since [~foo] is not allowed.
[~ foo] = size(1);
